--- a/templates/tab-account.html
+++ b/templates/tab-account.html
@@ -1,5 +1,5 @@
 <ion-view title="Account">
-  <ion-content class="padding">
+  <ion-pane class="padding">
     <h1>Account</h1>
-  </ion-content>
+  </ion-pane>
 </ion-view>
